<resources>
    <string name="app_name">Calculadora</string>
    <string name="boton_1">1</string>
    <string name="boton_2">2</string>
    <string name="boton_3">3</string>
    <string name="boton_4">4</string>
    <string name="boton_5">5</string>
    <string name="boton_6">6</string>
    <string name="boton_7">7</string>
    <string name="boton_8">8</string>
    <string name="boton_9">9</string>
    <string name="boton_0">0</string>
    <string name="boton_suma">+</string>
    <string name="boton_resta">-</string>
    <string name="boton_multi">*</string>
    <string name="boton_div">/</string>
    <string name="boton_punto">.</string>
    <string name="boton_igual">=</string>
    <string name="Textview1">numero</string>
    <string name="Textview2">signo</string>
    <string name="Textview3">=</string>

</resources>
